# orkg-nlp-api

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  openapi.json  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  app_factory.py  main.py
app/common/: errors.py
app/common/services/: runner.py  wrapper.py
app/common/util/: decorators.py  io.py
app/db/: connection.py  crud.py
app/db/models/: common.py  feedback.py
app/models/: annotation.py  clustering.py  common.py  feedback.py  nli.py  pdf.py  text.py
app/routers/: annotate.py  annotation.py  clustering.py  feedback.py  nli.py  pdf.py  text.py
app/services/: __init__.py  annotation.py  backend.py  clustering.py  feedback.py  nli.py  pdf.py  text.py
app/services/llm/: tasks.py
app/tests/: test_annotation.py  test_clustering.py  test_feedback.py  test_pdf.py  test_text.py
app/tests/db/: connection.py
app/tests/mock/: mock_annotation.py  mock_clustering.py  mock_text.py
tests/: test_annotation.py  test_clustering.py  test_feedback.py  test_nli.py  test_pdf.py  test_text.py
tests/db/: connection.py
tests/mock/: mock_annotation.py  mock_clustering.py  mock_nli.py  mock_text.py
